--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "babel-jest": "^28.1.2",
+    "@types/jest": "^28.1.4",
     "jest": "^28.1.2",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9"
   }
