--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
     "jest": "^28.1.2",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
-    "typescript": "^4.5.4",
+    "typescript": "^4.8.4",
     "vite": "^2.9.9"
   }
 }
