--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "ts-node": "^10.8.2",
     "typescript": "^4.8.4",
     "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "@types/animejs": "^3.1.5",
+    "animejs": "^3.2.1"
   }
 }
