--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/animejs": "^3.1.5",
-    "animejs": "^3.2.1"
+    "animejs": "^3.2.1",
+    "typedoc": "^0.23.17"
   }
 }
