--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@types/animejs": "^3.1.5",
+    "@types/d3": "^7.4.0",
     "animejs": "^3.2.1",
+    "d3": "^7.4.0",
     "typedoc": "^0.23.17"
   }
 }
