--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bplus-tree-vis",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -17,7 +18,7 @@
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.2",
     "typescript": "^4.8.4",
-    "vite": "^2.9.9"
+    "vite": "^6.2.5"
   },
   "dependencies": {
     "@types/d3": "^7.4.0",
