--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "./animejs/types/index.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --outDir ./",
     "preview": "vite preview",
     "test": "jest"
   },
